prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: secure-prod
  labels:
    app.kubernetes.io/managed-by: gitops
    environment: prod
